--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,13 @@
-
 @import "tailwindcss";
+    
+@theme {
+    --breakpoint-phone: 305px;
+    --breakpoint-tablet: 601px;
+    --breakpoint-laptop: 992px;
+    --breakpoint-pc: 1280px;
+    --color-nigga: #DCA06D;
+}
+
 
 /*
  TEMPLATE FOR ADDING FONTS 
